--- a/packages/wix-ui-core/tsconfig.json
+++ b/packages/wix-ui-core/tsconfig.json
@@ -11,7 +11,8 @@
     "strictNullChecks": false,
     "target": "es5",
     "jsx": "react",
-    "lib": ["dom", "es2016"],
+    "lib": ["dom", "esnext"],
+    "resolveJsonModule": true,
     "paths": {
       "protractor": ["src/protractor.d.ts"] // Fix protractor issue https://github.com/angular/protractor/issues/5348
     }
