--- a/packages/wix-ui-core/package.json
+++ b/packages/wix-ui-core/package.json
@@ -105,6 +105,7 @@
     "wix-ui-test-utils": "^1.0.151"
   },
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
     "@storybook/react": "5.0.0",
     "@stylable/cli": "^3.4.0",
     "@stylable/core": "^3.4.0",
@@ -120,8 +121,6 @@
     "@ui-autotools/a11y": "^2.4.0",
     "@ui-autotools/registry": "^4.0.0",
     "@ui-autotools/sanity": "^2.5.0",
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
     "enzyme": "^3.0.0",
     "enzyme-adapter-react-16": "^1.0.5",
     "execa": "^2.0.3",
@@ -160,7 +159,9 @@
     "moduleNameMapper": {
       "\\.(scss)$": "identity-obj-proxy"
     },
-    "setupTestFrameworkScriptFile": "wix-ui-test-utils/jest-setup",
+    "setupFilesAfterEnv": [
+      "wix-ui-test-utils/jest-setup"
+    ],
     "setupFiles": [
       "raf/polyfill",
       "jest-canvas-mock",
