--- a/packages/wix-ui-core/package.json
+++ b/packages/wix-ui-core/package.json
@@ -105,6 +105,7 @@
     "wix-ui-test-utils": "^1.0.151"
   },
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
     "@storybook/react": "^5.0.0",
     "@stylable/cli": "^3.4.0",
     "@stylable/core": "^3.4.0",
